[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/raiix_statemachine/StateMachineEditor/StateMachineResourceEditor.gd" type="Script" id=1]
[ext_resource path="res://addons/raiix_statemachine/StateMachineEditor/graph_edit/GraphEdit.tscn" type="PackedScene" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 6.0
margin_right = -8.0
margin_bottom = -8.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1008.0
margin_bottom = 20.0
custom_constants/separation = 12

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 32.0
margin_bottom = 17.0
text = "Path:"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 44.0
margin_right = 82.0
margin_bottom = 20.0
custom_constants/separation = 12

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/HBoxContainer"]
margin_right = 38.0
margin_bottom = 20.0
text = "root"

[node name="GraphEdit" parent="VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 45.0
margin_right = 1008.0
margin_bottom = 586.0
size_flags_vertical = 3

[node name="CreateNodeMenu" type="PopupMenu" parent="."]
margin_left = -172.0
margin_top = -173.0
margin_right = -1.0
margin_bottom = -42.0
size_flags_vertical = 3
items = [ "Create Template Node", null, 0, false, false, 0, 0, null, "", false ]
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="VBoxContainer/GraphEdit" to="." method="_on_GraphEdit_gui_input"]
[connection signal="id_pressed" from="CreateNodeMenu" to="." method="_on_CreateNodeMenu_id_pressed"]
